--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
-
+ # vmImage: ubuntu-latest
+  agent: auto-test-pool
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
