--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool:
  # vmImage: ubuntu-latest
-  agent: auto-test-pool
+  name: auto-test-pool
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
