Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,4 @@ steps:
   inputs:
     scriptSource: 'filePath'
     scriptPath: './GUI-auto-test/operation-control.py'
+    workingDirectory: './GUI-auto-test/'
