--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,19 +11,19 @@ pool:
   name: auto-test-pool
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+# - task: NodeTool@0
+#   inputs:
+#     versionSpec: '10.x'
+#   displayName: 'Install Node.js'
 
-- script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
-  displayName: 'npm install and build'
+# - script: |
+#     npm install -g @angular/cli
+#     npm install
+#     ng build --prod
+#   displayName: 'npm install and build'
 
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
-    scriptPath: './GUI-auto-test/operation-control.py'
-    workingDirectory: './GUI-auto-test/'
+    scriptPath: 'GUI-auto-test/operation-control.py'
+    workingDirectory: 'GUI-auto-test/'
