--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,5 @@ steps:
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
-    scriptPath: 'GUI-auto-test/operation-control.py'
-    workingDirectory: 'GUI-auto-test/'
+    scriptPath: 'guitest/operation_control.py'
+    workingDirectory: 'guitest/'
