--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,10 @@ pool:
   name: auto-test-pool
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+# - task: NodeTool@0
+#   inputs:
+#     versionSpec: '10.x'
+#   displayName: 'Install Node.js'
 
 # - script: |
 #     npm install -g @angular/cli
@@ -22,6 +22,10 @@ steps:
 #     ng build --prod
 #   displayName: 'npm install and build'
 
+
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.7'
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
