--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,9 @@ strategy:
     Python37:
       python.version: '3.7'
 
+
+
+
 steps:
 # - task: NodeTool@0
 #   inputs:
@@ -26,6 +29,9 @@ steps:
 #     npm install
 #     ng build --prod
 #   displayName: 'npm install and build'
+- task: InstallPython@1
+  inputs:
+    version: '$(PythonVersion)'
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.7'
