--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     version: 'python'
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: 'python'
+    versionSpec: 'PythonNuget'
     addToPath: true
     architecture: 'x64'
 
