Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     version: 'python'
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: 'python.x'
+    versionSpec: 'python.3.x'
     addToPath: true
     architecture: 'x64'
 
