--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,9 +38,9 @@ steps:
     
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: 'python.3.x'
-    addToPath: true
-    architecture: 'x64'
+    versionSpec: '3.x'
+    # addToPath: true
+    # architecture: 'x64'
 
 # - task: UsePythonVersion@0
 #   inputs:
