Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,17 +31,17 @@ steps:
 #   displayName: 'npm install and build'
 
 
-- task: InstallPython@1
-  inputs:
-    version: 'python'
-    outputdir: '$(Agent.ToolsDirectory)\python'
-  displayName: 'python install1111 $(AGENT_TOOLSDIRECTORY)'
+# - task: InstallPython@1
+#   inputs:
+#     version: 'python'
+#     outputdir: '$(Agent.ToolsDirectory)\python'
+#   displayName: 'python install1111 $(AGENT_TOOLSDIRECTORY)'
     
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.x'
     # addToPath: true
-    # architecture: 'x64'
+    architecture: 'x64'
 
 # - task: UsePythonVersion@0
 #   inputs:
