--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,10 +43,8 @@ steps:
     # addToPath: true
     architecture: 'x64'
 
-# - task: UsePythonVersion@0
-#   inputs:
-#     versionSpec: '3.7'
-
+- script: pip install -r requirements.txt
+  displayName: 'Install requirements'
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
