--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,9 +43,9 @@ steps:
     # addToPath: true
     architecture: 'x64'
 
-- script: pip install -r requirements.txt
+- script: pip install -r guitest/requirements.txt
   displayName: 'Install requirements'
-  
+
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
