--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,9 @@ steps:
     # addToPath: true
     architecture: 'x64'
 
+- script: python -m pip install --upgrade pip setuptools wheel
+  displayName: 'Install tools'
+
 - script: pip install -r guitest/requirements.txt
   displayName: 'Install requirements'
 
