Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,5 +55,5 @@ steps:
 - task: PythonScript@0
   inputs:
     scriptSource: 'filePath'
-    scriptPath: 'guitest/operation_control.py'
-    workingDirectory: 'guitest/'
+    scriptPath: 'tst.py'
+    workingDirectory: './'
